--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>FranticManager | Home</title>
+    <link rel="icon" href="photo.jpg">
+<link rel="stylesheet" type="text/css" href="style2.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
   </head>
   <body>
     <nav>
@@ -14,6 +18,30 @@
         <li><a class="nav-links"href="stringgen.html">Random String Creator</a></li>
       </ul>
     </nav>
+<br>
+    <div class="info">
+     <h1 align="center">Welcome!!</h1>
+     <p align="center">This page is mainly going to a bunch of coding projects of mine</p><br>
+     <p align="center">Social stuffs</p>
+    </div>
+    <section>
+
+    	<div class="middle">
+    	<a class="btn" href="https://www.youtube.com/channel/UCeY5JAZTIrIUcX5lzYZSNKA?">
+    		<i class="fab fa-youtube"></i>
+    	</a>
+    	<a class="btn" href="https://www.instagram.com/franticbombcsgo/">
+    		<i class="fab fa-instagram"></i>
+    	</a>
+    	<a class="btn" href="https://twitter.com/fRABTICbOMBcsgo">
+    		<i class="fab fa-twitter"></i>
+    	</a>
+    	<a class="btn" href="https://www.facebook.com/FranticBomb/">
+    		<i class="fab fa-facebook-f"></i>
+    	</a>
+    	</div>
+
+    </section>
 
   </body>
 </html>
